# scoksea

./: CMakeLists.txt  Makefile  client.c  create.json  main.c  readme.md  server.c
include/: scok.h
src/: lib.c
